# Guitar_Synthesizer

./: .gitignore  Pipfile
demo/: play_chorus.py  play_diablo.py
digital-guitar/: pyproject.toml
digital-guitar/src/digitar/: burst.py  chords.py  instrument.py  pitch.py  processing.py  stroke.py  synthesis.py  temporal.py  track.py
digital-guitar/tablature/: models.py  player.py
