[tool.poetry]
name = "digitar"
version = "0.1.0"
description = ""
authors = ["Otero <oteronickbrian@gmail.com>"]
readme = "README.md"
packages = [{include = "digitar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pedalboard = "^0.9.10"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
play-tab = "tablature.player:main"